# fido2-smartcard-bridge

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  pyproject.toml  shell.nix
fido2_smartcard_bridge/: __init__.py  ctap_hid_device.py  sd_notify.py  uhid.py
nix/: module.nix  package.nix  pre-commit.nix
